# M1-S2-Image-Processing-Project

./: CMakeLists.txt  README.md
src/: main.cpp
